<resources>
    <string name="app_name">second-hand market app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_front_page">frontPage</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="second_hand_product">Second Hand Product</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>
</resources>