<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.second_handmarketapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.second_handmarketapp.ui.catrgory.CatFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.second_handmarketapp.ui.profile.ProfileFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_cat" />
    <fragment
        android:id="@+id/nav_supply"
        android:name="com.example.second_handmarketapp.SupplyFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_supply" />
    <fragment
        android:id="@+id/nav_sechand"
        android:name="com.example.second_handmarketapp.sechandFragment"
        android:label="@string/second_hand_product"
        tools:layout="@layout/fragment_sechand" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.second_handmarketapp.OrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.second_handmarketapp.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.second_handmarketapp.nav_chat"
        android:label="fragment_nav_chat"
        tools:layout="@layout/fragment_nav_chat" />


</navigation>